v6.0
-----
+ Added warning dialog when browsing Steam in a language other than your preferred language
+ Added option to display store page videos using HTML5 player instead of Flash
+ Added coupon discount percentage to display on coupon tags
+ Added your personal achievement stats back to app pages in the "My Activity" box
: Fixed a bug that caused Early Access overlays to incorrectly show on games with coupons
: Fixed header links inserted by Enhanced Steam not displaying due to a change made by Valve
: Fixed a bug in some languages where badge filtering didn't work properly
: Fixed a bug in entering custom amounts into Steam wallet page
: Enhanced Steam will now display the highest % off coupon you have available on app pages

v5.9
-----
+ Added a link on user profiles to their wishlist
+ Added back the achievement section to app pages that Valve mysteriously removed
+ Added sorting options to achievement pages, and the ability to sort by date unlocked
+ Added option to hide all Early Access games on the homepage and search results
+ Added badge completion and value of card drops to badges page based on avg card price
+ Added badge page sorting option to sort by highest estimated drop value
+ Added Enhanced Steam features to Steam Tag pages
: Fixed a bug that caused hiding DLC for unowned games not to work under certain circumstances
: Fixed homepage "Featured" section being incorrectly sized due to layout changes

v5.8
-----
+ Added extended options for DLC checkboxes that are accessible by clicking "Options ▾".
+ Added price options to search results pages letting you easily filter results by price
+ Added speech input option to search boxes on store pages
+ Incorporated coupon codes into lowest price data
+ The "Remove" links on the wishlist no longer require the page to reload
+ Added an option to disable Early Access image overlays
: Fixed a bug in market transaction total caused by change in API by Valve